JVM运行机制 v1.2